--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@pixi/react": "^7.1.2",
+    "@pixi/spritesheet": "^7.4.2",
+    "@types/pixi.js": "^5.0.0",
     "next": "14.2.5",
     "pixi.js": "^7.4.2",
     "react": "^18",
