create new game style

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/pixi.js": "^5.0.0",
     "next": "14.2.5",
     "pixi.js": "^7.4.2",
+    "random-word-slugs": "^0.1.7",
     "react": "^18",
     "react-dom": "^18",
     "tunnel-rat": "^0.1.2",
@@ -24,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
